change home to index everywhere

--- a/Page_Editors/Student-01/pageEditor_ST1.html
+++ b/Page_Editors/Student-01/pageEditor_ST1.html
@@ -13,7 +13,7 @@
     
     <header>
       <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
         <a href="feedback.html">Feedback</a>
@@ -75,7 +75,7 @@
         Life Below Water
       </div>
       <nav>
-        <a href="../../home.html">Home</a>
+        <a href="../../index.html">Home</a>
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
         <a href="feedback.html">Feedback</a>
@@ -101,7 +101,7 @@
   <h2>Techniques and Design Decisions</h2>
   <p>I used semantic HTML elements such as <code>&lt;section&gt;</code>, <code>&lt;header&gt;</code>, <code>&lt;nav&gt;</code>, and <code>&lt;footer&gt;</code> to ensure accessibility and clean layout. CSS was used to apply consistent styling, hover effects, button transitions, and a responsive layout.</p>
 
-  <p>On the splash screen, I used a CSS animation loader and a <code>&lt;meta http-equiv="refresh"&gt;</code> tag to automatically redirect to <code>home.html</code>.</p>
+  <p>On the splash screen, I used a CSS animation loader and a <code>&lt;meta http-equiv="refresh"&gt;</code> tag to automatically redirect to <code>index.html</code>.</p>
 
   <p>The volunteer page uses flexbox and horizontal scrolling to show multiple cards, plus a feedback form using emoji icons and styled <code>&lt;select&gt;</code> and <code>&lt;button&gt;</code> elements.</p>
 
@@ -140,7 +140,7 @@
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">Table</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="feedback.html">Feedback</a></li>
