--- a/sitemap.html
+++ b/sitemap.html
@@ -30,7 +30,7 @@
         Life Below Water
       </div>
       <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
 
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
@@ -167,7 +167,7 @@
     <svg id="sitemap-lines" width="100%" height="700" style="position:absolute;top:0;left:0;z-index:1;pointer-events:none;"></svg>
     <!-- Row 1: Home -->
     <div class="nodes-row" id="row-home">
-      <a href="home.html" class="sitemap-link"><div class="sitemap-node home" tabindex="0">Home</div></a>
+      <a href="index.html" class="sitemap-link"><div class="sitemap-node home" tabindex="0">Home</div></a>
     </div>
     <!-- Row 2: Main Navigation -->
     <div class="nodes-row" id="row-main">
@@ -276,7 +276,7 @@
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">Table</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="feedback.html">Feedback</a></li>
