--- a/splash.html
+++ b/splash.html
@@ -56,7 +56,7 @@
         }, 2000); // Simulated 2-second load
       });
         setTimeout(function() {
-                window.location.href = "home.html";
+                window.location.href = "index.html";
             }, 4000); // 4000 milliseconds = 4 seconds
         </script>
 
