--- a/Page_Editors/Student-02/pageEditor_ST2.html
+++ b/Page_Editors/Student-02/pageEditor_ST2.html
@@ -96,7 +96,7 @@
         Life Below Water
       </div>
       <nav>
-        <a href="../../home.html">Home</a>
+        <a href="../../index.html">Home</a>
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
         <a href="feedback.html">Feedback</a>
@@ -271,7 +271,7 @@
           </p>
           <br />
           <h3>Page Link</h3>
-          <p><a href="../../home.html">Visit Home Page</a></p>
+          <p><a href="../../index.html">Visit Home Page</a></p>
         </section>
 
 
@@ -483,7 +483,7 @@
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">Table</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="feedback.html">Feedback</a></li>
