--- a/Page_Editors/Student-04/pageEditor_ST4.html
+++ b/Page_Editors/Student-04/pageEditor_ST4.html
@@ -95,7 +95,7 @@
         Life Below Water
       </div>
       <nav>
-        <a href="../../home.html">Home</a>
+        <a href="../../index.html">Home</a>
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
         <a href="feedback.html">Feedback</a>
@@ -388,7 +388,7 @@
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">Table</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="feedback.html">Feedback</a></li>
