--- a/Validation/Student-04/Validation_Page.html
+++ b/Validation/Student-04/Validation_Page.html
@@ -292,7 +292,7 @@ img {
         Life Below Water
       </div>
       <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="table.html">Table</a>
         <a href="team.html">Team</a>
         <a href="feedback.html">Feedback</a>
@@ -410,7 +410,7 @@ img {
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="table.html">Table</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="feedback.html">Feedback</a></li>
